<resources>
    <string name="app_name">Calculator</string>
    <string name="Positive_Negative">+/-</string>
    <string name="All_Clear">AC</string>
   <string name="Root">^/</string>
    <string name="Division">-=</string>
    <string name="One">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="Four">4</string>
    <string name="Five">5</string>
    <string name="Six">6</string>
    <string name="Seven">7</string>
    <string name="Eight">8</string>
    <string name="Nine">9</string>
    <string name="Zero">0</string>
    <string name="multiple">*</string>
    <string name="Substraction">-</string>
    <string name="addition">+</string>
    <string name="equalsto">=</string>
    <string name="Cancels">C</string>
    <string name="decimal">.</string>




</resources>
